--- a/backend/package.json
+++ b/backend/package.json
@@ -1,47 +1,35 @@
 {
-  "name": "project-tracker-api",
+  "name": "pm-tracker-backend",
   "version": "1.0.0",
-  "description": "Cloud-agnostic API for managing users, customers, projects, and finance updates",
-  "main": "index.js",
-  "scripts": {
-    "prestart": "npm install",
-    "start": "node index.js"
-  },
-  "keywords": [
-    "openapi-generator",
-    "openapi"
-  ],
-  "license": "Unlicense",
   "private": true,
+  "type": "module",
+  "main": "src/server.js",
+  "scripts": {
+    "dev": "node --watch src/server.js",
+    "start": "node src/server.js",
+    "migrate": "node scripts/migrate.js",
+    "seed": "node scripts/seed.js",
+    "lint": "eslint .",
+    "test": "node --test"
+  },
   "dependencies": {
-    "bcrypt": "^6.0.0",
-    "body-parser": "^1.19.0",
-    "camelcase": "^5.3.1",
-    "cookie-parser": "^1.4.4",
+    "argon2": "^0.41.1",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^4.16.4",
-    "express-openapi-validator": "^3.9.1",
-    "js-yaml": "^3.3.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "helmet": "^7.1.0",
+    "joi": "^17.10.2",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.14.3",
-    "ono": "^5.0.1",
-    "openapi-sampler": "^1.0.0-beta.15",
-    "swagger-ui-express": "^4.0.2",
-    "winston": "^3.2.1"
+    "mysql2": "^3.9.7",
+    "pino": "^9.4.0",
+    "pino-http": "^9.0.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "axios": "^1.11.0",
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.17.2",
-    "mocha": "^11.7.1"
-  },
-  "eslintConfig": {
-    "env": {
-      "node": true
-    }
+    "eslint": "^8.57.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.5.1"
   }
 }
